--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,5 +15,13 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
 
+  # Creating native splash screen
+  flutter_native_splash: ^2.4.0
+
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/icons/
+    
